# calliope

./: .dockerignore  .flake8  .gcloudignore  .gitignore  .mypy.ini  .pre-commit-config.yaml  .prettierignore  CLAUDE.md  Dockerfile  README.md  app.py  docker-compose.yml  piccolo_conf.py  pyproject.toml
calliope/: app.py  files.py  inference.py  piccolo_app.py  pyproject.toml  pyvenv.cfg  settings.py
calliope/commands/: index_stories.py
calliope/forms/: add_story_thumbnails.py  migrate_pydantic_to_piccolo.py  run_command.py
calliope/inference/: __init__.py  audio_to_text.py  image_analysis.py  inference.py  messages_to_object.py  text_to_image.py  text_to_text.py  text_to_video.py
calliope/inference/engines/: azure_vision.py  hugging_face.py  modal_sd_cli.py  modal_stable_diffusion_image.py  modal_stable_diffusion_remote.py  openai_audio.py  openai_image.py  openai_object.py  openai_text.py  replicate.py  runway.py  stability_image.py
calliope/intel/: astronomy.py  location.py  time.py  weather.py
calliope/location/: location.py
calliope/models/: __init__.py  base_config.py  config.py  flock_config.py  frame_sequence_response.py  image.py  inference_model_config.py  keys.py  location_metadata.py  parameters.py  schedule.py  sparrow_config.py  sparrow_state.py  story.py  story_context.py  story_frame.py  trigger_condition.py  video.py
calliope/piccolo_migrations/: calliope_2023_02_26t16_49_12_379657.py  calliope_2023_02_27t14_36_43_445633.py  calliope_2023_02_28t22_43_38_962509.py  calliope_2023_03_08t05_47_54_746122.py  calliope_2023_04_08t03_39_06_521711.py  calliope_2023_04_08t10_07_33_163620.py  calliope_2023_04_08t12_26_43_543540.py  calliope_2023_04_09t21_22_21_192157.py  calliope_2023_04_09t22_48_10_941982.py  calliope_2023_04_10t08_39_17_858265.py  calliope_2023_04_10t13_48_59_155443.py  calliope_2023_04_14t13_02_38_011157.py  calliope_2023_05_05t10_52_55_011937.py  calliope_2023_05_05t14_09_37_436612.py  calliope_2023_05_05t16_09_25_537041.py  calliope_2023_05_05t16_21_40_451002.py  calliope_2023_07_06t14_14_49_664537.py  calliope_2023_07_21t16_24_55_013766.py  calliope_2024_01_12t09_35_22_532352.py  calliope_2024_01_12t09_59_51_216818.py  calliope_2024_01_14t14_43_23_366807.py  calliope_2024_06_15t10_29_15_129348.py  calliope_2025_05_09t14_33_40_364069.py  calliope_2025_05_14t08_21_26_355485.py  calliope_2025_05_14t08_43_46_073000.py
calliope/routes/: media.py  meta.py  thoth.py
calliope/routes/v1/: bookmark.py  config.py  media.py  story.py  test.py
calliope/routes/v2/: __init__.py  models.py  stories.py  tasks.py
calliope/storage/: config_manager.py  firebase.py  migrate_pydantic_to_piccolo.py  schedule.py  state_manager.py  vector_manager.py
calliope/strategies/: __init__.py  base.py  continuous_v0.py  continuous_v1.py  fern.py  lavender.py  literal.py  narcissus.py  parameters.py  registry.py  show_this_frame.py  simple_one_frame.py  tamarisk.py
calliope/tables/: __init__.py  bookmark.py  config.py  image.py  model_config.py  prompt_template.py  sparrow_state.py  story.py  story_frame.py  story_frame.py.sav  video.py
calliope/tasks/: __init__.py  factory.py  gcp_queue.py  handlers.py  local_queue.py  queue.py
calliope/templates/: macros.j2  thoth.html  thoth_search.html  thoth_story.html
calliope/utils/: authentication.py  fastapi.py  file.py  google.py  id.py  image.py  image_format.py  location.py  pagination.py  piccolo.py  story.py  string.py  text.py  video.py
client/: Back0 (1).raw.cpp  formats.py  main.py  story_loop.py
clio/: .prettierignore  ClioApp.jsx.bak  capacitor.config.ts  package-lock.json  package-lock.json.bak  package.json  package.json.bak2  package.json.original  setup-capacitor.sh  tsconfig.json  webpack.config.js
clio-elm/: index.html
clio-elm/src/: Main.elm  WebcamApp.elm  package.json
clio/android/: capacitor.settings.gradle
clio/android/app/: build.gradle  capacitor.build.gradle
clio/capacitor-sav/: package-lock.json  package.json
clio/ios/App/: Podfile
clio/node_modules.bak.2/: .package-lock.json
clio/node_modules.bak.2/browser-id/: package.json
clio/node_modules.bak.2/react-fullscreen-menu/: package.json
clio/node_modules.bak.2/versioned-storage/: package.json
clio/public/: index.html
clio/src/: AboutPanel.tsx  AudioCapture.tsx  Camera.tsx  Carousel.css  Carousel.js  Carousel.tsx  Clio.css  ClioApp.css  ClioApp.jsx  ClioApp.module.css  ClioApp.tsx  ClioDrawer.tsx  ClioSwipeable.jsx  ClioSwipeable.tsx  ClioWithTimeline.tsx  ControlledSubMenu.tsx  CreateStoryPanel.tsx  FullscreenMenu.tsx.bak  Loader.tsx  MainMenu.jsx  MainMenu.tsx  PhotoCapture.tsx  StoryBrowser.tsx  Toolbar.css  Toolbar.jsx  Toolbar.module.css  Toolbar.tsx  Types.ts  cameraStyles.ts  fullscreenMenuStyles.ts.bak  index.js  index.tsx  mobile.css
clio/src/audio/: AudioCapture.tsx  AudioCaptureAdapter.tsx  audio-recorder.css  interfaces.ts  useAudioRecorder.ts
clio/src/capacitor/: index.ts
clio/src/components/: Carousel.css  Carousel.tsx  LazyMedia.css  LazyMedia.tsx  MainDrawer.tsx  MediaContainer.css  MediaContainer.tsx  NetworkTest.tsx  ServerSelector.tsx  Toolbar.css  Toolbar.tsx  VideoLoop.tsx
clio/src/icons/: IconBookmark.tsx  IconBookmarkAdd.tsx  IconBookmarkList.tsx  IconCamera.tsx  IconCameraReverse.jsx  IconCameraReverse.tsx  IconChevronDown.tsx  IconChevronLeft.jsx  IconChevronLeft.tsx  IconChevronRight.jsx  (+24 more)
docs/: Admin.md  Clio.md  README.md  Thoth.md  api.md  building.md  config.md  firebase.md  inference.md  location.md  running.md  scheduling.md  storage.md  stories.md
requirements/: development.in  development.txt  development.txt.bak  production.in  production.txt
scripts/: create_admin_user.sh  db_bootstrap.sh  update_ffmpeg.sh
static/: index.html  main.js  main.js.LICENSE.txt
static/clio/: 30.main.js  642.main.js  961.main.js  index.html  main.js  main.js.LICENSE.txt  manifest.json  node_modules_capacitor_device_dist_esm_web_js.main.js  node_modules_capacitor_geolocation_dist_esm_web_js.main.js  node_modules_capacitor_splash-screen_dist_esm_web_js.main.js
static/thoth/: styles.css
(+27 files in other folders)
